--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,61 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title>Spring Security Example </title>
+    <head> 
+        <title>Iniciando Estudos: Spring Web Content</title> 
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="container">
         <div th:if="${param.error}">
-            Invalid username and password.
+            Usuario ou senha invalidos
         </div>
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
+
         <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+            <input type="text" name="username" class="form-control" />
+            <!-- <label class="form-label" for="username">Email</label> -->
+            </div>
+        
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+            <input type="password" name="password" class="form-control" />
+            <!-- <label class="form-label" for="form2Example2">Senha</label> -->
+            </div>
+        
+            <div class="row mb-4">        
+                <div class="col">
+                    <!-- Simple link -->
+                    <a href="#!">Esqueceu sua senha?</a>
+                </div>
+            </div>
+        
+            <!-- Submit button -->
+            <div><input type="submit" value="Logar"/></div>
+        
+            <!-- Register buttons -->
+            <div class="text-center">
+            <p>Not a member? <a href="#!">Cadastro</a></p>
+            <p>or sign up with:</p>
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-facebook-f"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-google"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-twitter"></i>
+            </button>
+        
+            <button type="button" class="btn btn-link btn-floating mx-1">
+                <i class="fab fa-github"></i>
+            </button>
+            </div>
         </form>
     </body>
-</html>
+  </html>
