--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,10 +10,10 @@
             Usuario ou senha invalidos
         </div>
         <div th:if="${param.logout}">
-            You have been logged out.
+            Feito Log off.
         </div>
 
-        <form th:action="@{/login}" method="post">
+        <form th:action="@{/login}" method="post" style="margin-top: 15ch;">
             <!-- Email input -->
             <div class="form-outline mb-4">
             <input type="text" name="username" class="form-control" />
@@ -38,24 +38,7 @@
         
             <!-- Register buttons -->
             <div class="text-center">
-            <p>Not a member? <a href="#!">Cadastro</a></p>
-            <p>or sign up with:</p>
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
-            </button>
-        
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-google"></i>
-            </button>
-        
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-twitter"></i>
-            </button>
-        
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-github"></i>
-            </button>
-            </div>
+            <p>Sem cadastro? <a href="#!">Cadastar</a></p>
         </form>
     </body>
   </html>
