--- a/src/main/resources/templates/fragments/lateral.html
+++ b/src/main/resources/templates/fragments/lateral.html
@@ -9,6 +9,12 @@
       <a class="nav-link" href="/">Inicio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      <a class="nav-link" href="/home?name=CADASTRO">Cadastro de usuario</a>
     </li>
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="/home?name=lista">Lista de usuario</a>
+    </li class="nav-item">
+    <li>
+      <a class="nav-link" href="/home?name=editar">Editar usuario X</a>
+    </li>         -->
   </ul>
