ajustes link e pom funcionando

--- a/src/main/resources/templates/fragments/lateral.html
+++ b/src/main/resources/templates/fragments/lateral.html
@@ -1,6 +1,6 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Link para lugar nenhum</a>
+      <a class="nav-link active" aria-current="page" href="/home">Link para lugar nenhum</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/login">Login</a>
