ajustes paginas iniciais

--- a/src/main/resources/templates/fragments/lateral.html
+++ b/src/main/resources/templates/fragments/lateral.html
@@ -9,6 +9,6 @@
       <a class="nav-link" href="/">Inicio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/home?name=CADASTRO">Cadastro de usuario</a>
+      <a class="nav-link" th:href="@{/usuario/cadastro}">Cadastro de usuario</a>
     </li>
   </ul>
