--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -1,3 +1,7 @@
+<aside class="col-md-3">
+  <div th:replace="fragments/lateral"></div>
+</aside>
+
 <form>
     <h1>Cadastro de novo usuário do sistema</h1>
     <!-- Email input -->
